argocd/overlays/argocd-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      serviceAccountName: argocd-server
      containers:
        - name: argocd-server
          args:
            - /usr/local/bin/argocd-server
            - --insecure
            - --staticassets
            - /shared/app
