argocd/overlays/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
spec:
  template:
    spec:
      ingressClassName: cilium
